--- a/reg-config.in
+++ b/reg-config.in
@@ -6,6 +6,7 @@ incdir="@RealityGrid_INCLUDE_DIRS_CONFIG@"
 libdir="@RealityGrid_LIBRARY_DIRS_CONFIG@"
 linklibs="@REG_LINK_LIBRARIES@"
 extlibs="@REG_EXTERNAL_LIBS@"
+modlist="@REG_MODULES@"
 
 usage() {
     cat <<EOF
@@ -13,12 +14,13 @@ Usage: reg-config [OPTION]
 
 Where OPTION can be one of:
 
-  --prefix		print the base location of the RealityGrid installation
-  --libs		print library linking information
-  --cflags		print pre-processor and compiler flags
-  --opts		print the options selected during the build
-  --help		display this help and exit
-  --version		output version information
+  -p, --prefix		print the base location of the RealityGrid installation
+  -m, --modules		print the list of modules available in this installation
+  -l, --libs		print library linking information
+  -f, --cflags		print pre-processor and compiler flags
+  -o, --options		print the options selected during the build
+  -h, --help		display this help and exit
+  -v, --version		output version information
 EOF
 
     exit $1
@@ -27,9 +29,6 @@ EOF
 if test $# -eq 0; then
     usage 1
 fi
-
-cflags=false
-libs=false
 
 while test $# -gt 0; do
     case "$1" in
@@ -56,6 +55,10 @@ while test $# -gt 0; do
 	echo $extlibs
 	;;
 
+    -m|--mods|--modules)
+	echo -e "${modlist//;/\n}"
+	;;
+
     -o|--opts|--options)
 	echo "Standard options:"
 	echo "  REG_DEBUG:                   @REG_DEBUG@"
@@ -63,14 +66,12 @@ while test $# -gt 0; do
 	echo "  REG_BUILD_FORTRAN_WRAPPERS:  @REG_BUILD_FORTRAN_WRAPPERS@"
 	echo "  REG_BUILD_DOCUMENTATION:     @REG_BUILD_DOCUMENTATION@"
 	echo "  REG_SOCKET_STEERING:         @REG_SOCKET_STEERING@"
-	echo "  REG_SOCKET_SAMPLES:          @REG_SOCKET_SAMPLES@"
 	echo "  REG_SOAP_STEERING:           @REG_SOAP_STEERING@"
 	echo "  REG_USE_OPENSSL:             @REG_USE_OPENSSL@"
 	echo "Advanced options:"
 	echo "  REG_DEBUG_FULL:              @REG_DEBUG_FULL@"
 	echo "  REG_BUILD_SEPARATE_SOAP_LIB: @REG_BUILD_SEPARATE_SOAP_LIB@"
 	echo "  REG_USE_WSRF:                @REG_USE_WSRF@"
-	echo "  REG_PROXY_SAMPLES:           @REG_PROXY_SAMPLES@"
 	echo "  REG_LOG_STEERING:            @REG_LOG_STEERING@"
 	echo "  REG_USE_TIMING:              @REG_USE_TIMING@"
 	echo "  REG_KEEP_XML_MESSAGES:       @REG_KEEP_XML_MESSAGES@"
