Move towards centralized cross-platform and library feature checks.
Added a cmake file to coordinate cross-platform checks and ascertain what
features various libraries support and how they are supported.

Examples:
 * On some systems malloc and friends are defined in stdlib.h rather than
   malloc.h
 * On some systems libsocket needs to be linked explicitly.
 * Various different flags (such as MSG_DONTWAIT and MSG_NOSIGNAL) are not
   supported on all platforms

This commit checks all the above.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,9 @@ endif(NOT EXECUTABLE_OUTPUT_PATH)
 include(ModulesMacro)
 include(Modules)
 
+# do platform checks
+include(PlatformFeatures)
+
 # set up configure header file
 configure_file(
   "${PROJECT_SOURCE_DIR}/ReG_Steer_Config.h.in"
