Grid Services code removed and gSoap bindings updated to version 2.7.13.
The Grid Services code (SGS, SGSFactory, ServiceGroupRegistration,
RealityGridTree and RealityGridTreeFactory) is no longer used due to the move
to WSRF from OGSI so it has been removed.

The namespaces used for WSRP, WSRL and addressing have also changed and are
updated in this patch.

The version of gSoap used to generate the bindings has been updated to 2.7.13.

--- a/src/gsoap_stubs/Makefile
+++ b/src/gsoap_stubs/Makefile
@@ -27,20 +27,15 @@
 #  CORRECTION.
 #
 #  Authors........: Andrew Porter
+#                   Robert Haines
 #
 #------------------------------------------------------------------------
 
-SOAP_CPP2 = /usr/local/bin/soapcpp2
-include ../../Makefile.include
-include ../../make/Makefile.${ARCH}
-
-.SUFFIXES: .o .c
+SOAP_CPP2 = /opt/software/gsoap-2.7.13/gsoap/bin/linux386/soapcpp2
 
 all: soap_stubs
 
-soap_stubs: all_hdrs.h SWS.h SGS.h SGSFactory.h SWSFactory.h \
-           ServiceGroupRegistration.h RealityGridTreeFactory.h \
-           RealityGridTree.h CheckPointTree.h CheckPointTreeNode.h
+soap_stubs: all_hdrs.h SWS.h SWSFactory.h CheckPointTree.h CheckPointTreeNode.h
 	${SOAP_CPP2} -c all_hdrs.h
 
 install:
