Build system improvements relating to modularization work.
 * Now Lists *all* include directories in RealityGrid_INCLUDE_DIRS_CONFIG, not
   just the RealityGrid ones.
 * Writes out a new file (RealityGridModulesList.cmake) containing details of
   which modules are available or if the module is built in if monolithic.
 * Now supplies a list of built in modules to reg-config if not a modular build.
 * Removed old library options (such as REG_SOAP_STEERING) from
   GenerateRealityGridConfig.cmake and ReG_Steer_Config.h.in.
 * Fixed a minor bug whereby common source files could be included twice in a
   monolithic build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,6 +185,9 @@ configure_file(
   COPYONLY IMMEDIATE
 )
 
+# create module list file
+include(GenerateRealityGridModuleList)
+
 # create build- and install-tree packaging info
 include(GenerateRealityGridConfig)
 
@@ -197,3 +200,10 @@ install(FILES
   "${PROJECT_BINARY_DIR}/RealityGridLibraryDepends.cmake"
   DESTINATION lib/RealityGrid
 )
+
+if(REG_BUILD_MODULAR_LIBS)
+  install(FILES
+    "${PROJECT_BINARY_DIR}/RealityGridModulesList.cmake"
+    DESTINATION lib/RealityGrid
+  )
+endif(REG_BUILD_MODULAR_LIBS)
