--- a/UseRealityGrid.cmake.in
+++ b/UseRealityGrid.cmake.in
@@ -16,4 +16,7 @@ if(NOT REG_USE_FILE_LOADED)
   # tell the linker where the libs are
   link_directories(${RealityGrid_LIBRARY_DIRS})
 
+  # load in the modules
+  include(${RealityGrid_MODULES_LIST})
+
 endif(NOT REG_USE_FILE_LOADED)
