Require OpenSSL for WSRF Steering so that we can always use HTTPS or WSSE if required.
OpenSSL is required for HTTPS and/or WSSE. If the user is using HTTP they still
might use WSSE for some low level security so OpenSSL is still required. As a
result there is almost no point in not using OpenSSL.

All WSRF code that tried to (badly) work around a lack of OpenSSL is removed and
OpenSSL is made a requirement.

 * Main CMakeLists.txt now no longer checks for OpenSSL - moved into a
   WSRF-specific file.
 * Minor changes to mini_steerer to reflect changes to the WSRF setup.
 * Removed references to OpenSSL and WSRF, etc in the generated config scripts.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,7 +46,6 @@ set(REG_LIB_SRCS
 
 # header files and definitions
 include_directories(${PROJECT_SOURCE_DIR}/include)
-add_definitions(-DWITH_CDATA)
 
 #
 # Build the Fortran bits and include them in the main library
@@ -102,6 +101,16 @@ else(REG_BUILD_MODULAR_LIBS)
     list(REMOVE_DUPLICATES REG_LIB_SRCS)
   endforeach(type ${REG_MODULES_TYPES})
 endif(REG_BUILD_MODULAR_LIBS)
+
+#
+#
+# NEEDS DOING BETTER (FOR MONOLITHIC BUILDS, ETC)
+#
+#
+set_target_properties(ReG_Steer_Steering_WSRF
+  PROPERTIES
+  COMPILE_FLAGS -DWITH_OPENSSL
+)
 
 # need to make sure everything is built with PIC in case
 # the static libs are to be embedded in a shared object
