Move the platform dependency checks to their own directory.
Reduces clutter in the CMake directory and makes it more obvious which modules
have their own checks.

Various other minor renames to fit into this new structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,8 +85,8 @@ endif(REG_BUILD_MODULAR_LIBS)
 include(ModulesMacro)
 include(Modules)
 
-# do platform checks
-include(PlatformFeatures)
+# do dependency checks
+include(deps/All)
 
 # set up configure header file
 configure_file(
