Add a per-module build step so that each module can have custom build steps.
The build steps are put in the CMake/build directory and are driven by
CMake/build/All.cmake which also sets some global module build steps up. This
is all called from the src directory after the targets have been set up so that
things such as source file and target properties can be set.

Code that was trying (unsuccessfully) to set -fPIC on source files within the
ModulesMacro has been moved to All.cmake where it now works as expected.

WSRF is provided as an example module as those source files require WITH_OPENSSL
and WITH_CDATA to be defined while building.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,16 +102,6 @@ else(REG_BUILD_MODULAR_LIBS)
   endforeach(type ${REG_MODULES_TYPES})
 endif(REG_BUILD_MODULAR_LIBS)
 
-#
-#
-# NEEDS DOING BETTER (FOR MONOLITHIC BUILDS, ETC)
-#
-#
-set_target_properties(ReG_Steer_Steering_WSRF
-  PROPERTIES
-  COMPILE_FLAGS -DWITH_OPENSSL
-)
-
 # need to make sure everything is built with PIC in case
 # the static libs are to be embedded in a shared object
 if(NOT REG_BUILD_SHARED_LIBS)
@@ -133,6 +123,11 @@ if(REG_BUILD_SHARED_LIBS)
     PROPERTIES ${REG_LIBRARY_VERSION}
   )
 endif(REG_BUILD_SHARED_LIBS)
+
+#
+# Any other custom build steps needed? 
+#
+include(build/All)
 
 #
 # install libs and modules
