Added a framework in which to do platform specific configuration.
This uses the CMAKE_SYSTEM_NAME variable to use a file of that name for such
configuration steps.

Examples are included for MacOSX (the Darwin.cmake file) and Cygwin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,9 @@ include(Modules)
 # do dependency checks
 include(deps/All)
 
+# do platform compatibility checks
+include(platform/All)
+
 # set up configure header file
 configure_file(
   "${PROJECT_SOURCE_DIR}/ReG_Steer_Config.h.in"
