Add a small check to prevent REG_DEBUG_FULL being ON if REG_DEBUG is OFF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,10 @@ option(REG_DEBUG "Enable debugging output from the library." OFF)
 if(REG_DEBUG)
   option(REG_DEBUG_FULL "Enable extended debugging output." OFF)
   mark_as_advanced(REG_DEBUG_FULL)
+else(REG_DEBUG)
+  if(REG_DEBUG_FULL)
+    set(REG_DEBUG_FULL OFF CACHE BOOL "Enable extended debugging output." FORCE)
+  endif(REG_DEBUG_FULL)
 endif(REG_DEBUG)
 option(REG_USE_TIMING "Enable internal timing routines - not very portable!" OFF)
 option(REG_KEEP_XML_MESSAGES "Keep xml messages for debugging purposes. Default is OFF." OFF)
