--- a/RealityGridConfig.cmake.in
+++ b/RealityGridConfig.cmake.in
@@ -47,10 +47,10 @@ set(RealityGrid_BIN_DIR "@RealityGrid_BIN_DIR_CONFIG@")
 set(RealityGrid_DOCS_DIR "@RealityGrid_DOCS_DIR_CONFIG@")
 
 # RealityGrid config options
-set(REG_USE_SHARED_LIBS "@REG_BUILD_SHARED_LIBS@")
-set(REG_USE_MODULAR_LIBS "@REG_BUILD_MODULAR_LIBS@")
-set(REG_DEBUG "@REG_DEBUG@")
-set(REG_BUILD_FORTRAN_WRAPPERS "@REG_BUILD_FORTRAN_WRAPPERS@")
+set(REG_USE_SHARED_LIBS @REG_BUILD_SHARED_LIBS@)
+set(REG_USE_MODULAR_LIBS @REG_BUILD_MODULAR_LIBS@)
+set(REG_DEBUG @REG_DEBUG@)
+set(REG_BUILD_FORTRAN_WRAPPERS @REG_BUILD_FORTRAN_WRAPPERS@)
 
 # build settings, use file and modules list locations
 set(RealityGrid_BUILD_SETTINGS_FILE "@RealityGrid_BUILD_SETTINGS_FILE_CONFIG@")
