Updates to the automatic documentation build rules.
 * Test to make sure 'dot' (part of graphviz) is found and pass this through to
   the doxyfile configuration stage.
 * Include the CMake-generated ReG_Steer_Config.h in the docs.
 * Minor tweaks for readability such as suppressing full path names.
 * The doxyfile is also updated to doxygen 1.5.5 (using doxygen -u) to remove
   various depricated tags.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -84,6 +84,12 @@ else(DOXYGEN_QUIET)
   set(DOXYGEN_QUIET NO)
 endif(DOXYGEN_QUIET)
 
+# was dot found as well?
+set(DOXYGEN_HAVE_DOT YES)
+if(DOXYGEN_DOT_EXECUTABLE MATCHES "NOTFOUND$")
+  set(DOXYGEN_HAVE_DOT NO)
+endif(DOXYGEN_DOT_EXECUTABLE MATCHES "NOTFOUND$")
+
 # configure the doxygen driver file
 configure_file(
   "${CMAKE_CURRENT_SOURCE_DIR}/doxyfile.in"
