Updates and corrections to the inline doxygen document comments in the code.
Some file were missing @brief statements and some files had incorrect @file
statements. Many @params were missing or wrong.

--- a/ReG_Steer_Config.h.in
+++ b/ReG_Steer_Config.h.in
@@ -1,3 +1,4 @@
+
 /*
   The RealityGrid Steering Library
 
@@ -46,7 +47,7 @@
  */
 
 /** @internal
-    @file ReG_Steer_Config.h.in
+    @file ReG_Steer_Config.h
     @brief Configuration file for passing build time options to source code
 
     All internal library source code and header files should include
