--- a/doc/doxyfile.in
+++ b/doc/doxyfile.in
@@ -508,7 +508,8 @@ WARN_LOGFILE           =
 
 INPUT                  = "@REG_SOURCE_DIR@/src" \
                          "@REG_SOURCE_DIR@/include" \
-                         "@REG_BINARY_DIR@/ReG_Steer_Config.h"
+                         "@REG_BINARY_DIR@/ReG_Steer_Config.h" \
+                         "@REG_SOURCE_DIR@/examples"
 
 # This tag can be used to specify the character encoding of the source files 
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is 
