Move file-based config into file modules and make scratch dir configurable.
Since the move to modularization we should be at pains to make sure that
configuration data intended for each module is not polluting the common
code-base. There was a reference to the file-based steering directory location
in Steerer_connection_table_type even though such references for sockets- and
WSRF-based steering were removed.

This patch removes this anomally and further introduces the idea of a common
scratch directory (that can be used by all modules) that provides the base
for file-based steering messages from now on.

A default scratch dir of ./ is now defined by REG_SCRATCH_DEFAULT which can be
customized during the build via cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,10 +115,12 @@ configure_file(
 include_directories("${PROJECT_BINARY_DIR}")
 
 #
-# feature options
+# configure options
 #
 option(REG_LOG_STEERING "Whether or not to log steering commands. Default is ON." ON)
+set(REG_SCRATCH_DEFAULT "./" CACHE PATH "Directory for library to use as general scratch space. Default is the current directory (./).")
 mark_as_advanced(REG_LOG_STEERING)
+mark_as_advanced(REG_SCRATCH_DEFAULT)
 
 #
 # library debug options
