--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 #  The RealityGrid Steering Library
 #
-#  Copyright (c) 2002-2009, University of Manchester, United Kingdom.
+#  Copyright (c) 2002-2010, University of Manchester, United Kingdom.
 #  All rights reserved.
 #
 #  This software is produced by Research Computing Services, University
@@ -44,8 +44,6 @@
 #
 #  Author: Robert Haines
 
-find_package(MPI)
-
 if(REG_BUILD_MODULAR_LIBS)
   foreach(type ${REG_MODULES_TYPES})
     set(REG_EXAMPLES_MODULES_LINK ${REG_EXAMPLES_MODULES_LINK} "ReG_Steer_${type}_${REG_USE_MODULE_${type}}")
@@ -59,7 +57,7 @@ add_subdirectory(simple)
 
 if(REG_BUILD_FORTRAN_WRAPPERS)
   add_subdirectory(mini_app_f90)
-  if(MPI_FOUND)
+  if(REG_BUILD_MPI_EXAMPLE)
     add_subdirectory(mini_app_f90_parallel)
-  endif(MPI_FOUND)
+  endif(REG_BUILD_MPI_EXAMPLE)
 endif(REG_BUILD_FORTRAN_WRAPPERS)
