--- a/ReG_Steer_Config.h.in
+++ b/ReG_Steer_Config.h.in
@@ -66,7 +66,6 @@
 #cmakedefine REG_DEBUG
 #cmakedefine REG_DEBUG_FULL
 #cmakedefine REG_USE_TIMING
-#cmakedefine REG_KEEP_XML_MESSAGES
 
 #cmakedefine REG_NEED_MALLOC_H
 
@@ -76,6 +75,7 @@
 #cmakedefine01 REG_HAS_MSG_DONTWAIT
 #cmakedefine01 REG_HAS_MSG_WAITALL
 #cmakedefine01 REG_VALIDATE_XML
+#cmakedefine01 REG_KEEP_XML_MESSAGES
 
 /* standard system headers */
 
@@ -139,10 +139,6 @@
 
 #ifdef REG_USE_TIMING
 #define USE_REG_TIMING
-#endif
-
-#ifdef REG_KEEP_XML_MESSAGES
-#define NO_FILE_DELETE
 #endif
 
 #define __REG_STEER_CONFIG_H__
